<resources>
    <string name="app_name">PsicoTimes</string>
    <string name="title_activity_main">Principal</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Username</string>
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_password_confirmed">Confirmar contraseña</string>
    <string name="action_start">Iniciar aplicación</string>
    <string name="action_sign_in_short">Registrar</string>
    <string name="error_invalid_email">El correo electronico es invalido</string>
    <string name="error_invalid_password">Este Password es muy corta</string>
    <string name="error_incorrect_password">El Password es incorrecto</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"Los permisos de contacto son necesarios
        para proporcinar terminaciones de correos electronicos."
    </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configurar</string>
    <string name="action_update">Actualizar</string>

    <string name="exception_message_generic">Hubo un error en la apliación</string>
    <string name="exception_message_no_connection">No hay conexión a internet</string>
    <string name="exception_message_state_use_not_found">No se pueden recuperar los datos del estado de uso. Compruebe su conexión a internet</string>
    <string name="toolbar_tittle_create_profile">Crear perfil</string>
    <string name="error_field_number">El campo solo acepta números</string>

    <string name="occupation_prompt">Ocupación</string>
    <string name="sex_prompt">Sexo</string>
    <string name="status_network">Desconectado</string>
    <string name="dont_have_account">¿No tienes cuenta?,</string>
    <string name="create_here">crea una aquí</string>
    <string name="transitionname_record">transitionnamerecord</string>
    <string name="forgot_password">Se te olvidó tu contraseña?</string>

    <string-array name="occupations">
        <item>Solo trabajo</item>
        <item>Solo estudio</item>
        <item>Estudio y trabajo</item>
        <item>Sin occup.</item>
    </string-array>

    <string-array name="sex">
        <item>M</item>
        <item>F</item>
        <item>otros</item>
    </string-array>
</resources>
