<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:appTop="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.formandocodigo.psicotimes.login.view.CreateProfileActivity">

    <include layout="@layout/actionbar_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        appTop:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_name"
                android:theme="@style/EditTextBlack">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:theme="@style/EditTextBlack">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:theme="@style/EditTextBlack"
                appTop:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password_confirmed"
                android:theme="@style/EditTextBlack"
                appTop:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Fecha de nacimiento"
                android:theme="@style/EditTextBlack">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txt_birth_date_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_marginTop="10dp">

                <Spinner
                    android:id="@+id/spinner_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/sex"
                    android:prompt="@string/sex_prompt"
                    android:layout_weight="0.2"/>

                <Spinner
                    android:id="@+id/spinner_occupation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/occupations"
                    android:prompt="@string/occupation_prompt"
                    android:layout_weight="0.8"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:text="Utilizas tu móvil como herramienta de trabajo?"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <RadioButton
                    android:id="@+id/rbt_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Si"/>

                <RadioButton
                    android:id="@+id/rbt_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No"/>
            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_dni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Documento de indentidad"
                android:theme="@style/EditTextBlack">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_use_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Cuanto tiempo usa el movil al dia (h)"
                android:theme="@style/EditTextBlack">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_send_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/RaisedButtonDark"
                android:text="Enviar perfil"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ProgressBar
                    android:id="@+id/pgr_bar_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
